examples/errors/parse_invalid_diagram_header.orr
// Error [E100]: incomplete diagram header
// Phase: Parse
//
// The diagram declaration is missing its type (component/sequence).
// Expected: parse error on `diagram;`

diagram;

api: Rectangle;
db: Rectangle;

api -> db: "Query";
